--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,7 +2,7 @@
   "name": "@jade/react",
   "version": "0.0.1",
   "description": "jade前端自定义react代码规范",
-  "main": "eslint.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
