--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -2,7 +2,7 @@
   "name": "@jade/vue",
   "version": "0.0.1",
   "description": "jade前端自定义vue代码规范",
-  "main": "eslint.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
