fix: set project private

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jade-frontend-rules",
   "version": "0.0.1",
   "description": "jade前端自定义代码规范",
+  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
