fix: update package.json

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -3,11 +3,17 @@
   "version": "0.0.1",
   "description": "jade前端自定义react代码规范",
   "main": "index.js",
+  "files": [
+    "index.js"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0"
