--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -3,11 +3,17 @@
   "version": "0.0.1",
   "description": "jade前端自定义vue代码规范",
   "main": "index.js",
+  "files": [
+    "index.js"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
