--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@jade/vue",
+  "name": "@jhqn/vue",
   "version": "0.0.1",
   "description": "jade前端自定义vue代码规范",
   "main": "index.js",
