--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "jade-frontend-rules",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "jade前端自定义代码规范",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "pnpm run build --filter @jhqn/*",
+    "prepublishOnly": "pnpm run prepublishOnly --filter @jhqn/*"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
     "eslint-plugin-unicorn": "^37.0.0",
     "husky": "^7.0.2",
     "prettier": "^2.4.1",
+    "rimraf": "^3.0.2",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^9.0.2",
     "stylelint-config-rational-order": "^0.1.2",
