--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jhqn/react",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "jade前端自定义react代码规范",
   "main": "dist/index.js",
   "files": [
@@ -16,6 +16,8 @@
     "access": "public"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint": "^8.0.0",
