--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jhqn/react",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "jade前端自定义react代码规范",
   "main": "dist/index.js",
   "files": [
@@ -15,7 +15,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "devDependencies": {
+  "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint-plugin-react": "^7.26.1",
@@ -28,7 +28,6 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-unicorn": "^37.0.0",
-    "husky": "^7.0.2",
     "prettier": "^2.4.1",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^9.0.2",
@@ -38,7 +37,10 @@
     "stylelint-declaration-block-no-ignored-properties": "^2.4.0",
     "stylelint-no-unsupported-browser-features": "^5.0.2",
     "stylelint-order": "^4.1.0",
-    "stylelint-scss": "^3.21.0",
+    "stylelint-scss": "^3.21.0"
+  },
+  "devDependencies": {
+    "husky": "^7.0.2",
     "typescript": "^4.4.3"
   }
 }
