--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jhqn/vue",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "jade前端自定义vue代码规范",
   "main": "dist/index.js",
   "files": [
@@ -30,6 +30,11 @@
   "publishConfig": {
     "access": "public"
   },
+  "peerDependencies": {
+    "eslint": "^7.0.0 || ^8.0.0",
+    "prettier": "^2.4.0",
+    "stylelint": "^13.13.0"
+  },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -37,7 +42,6 @@
     "@vue/eslint-config-typescript": "^7.0.0",
     "eslint-plugin-prettier-vue": "^3.1.0",
     "eslint-plugin-vue": "^7.19.1",
-    "eslint": "^8.0.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
@@ -46,8 +50,6 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-unicorn": "^37.0.0",
-    "prettier": "^2.4.1",
-    "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^9.0.2",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-recommended": "^5.0.0",
@@ -55,7 +57,6 @@
     "stylelint-declaration-block-no-ignored-properties": "^2.4.0",
     "stylelint-no-unsupported-browser-features": "^5.0.2",
     "stylelint-order": "^4.1.0",
-    "stylelint-scss": "^3.21.0",
-    "typescript": "^4.4.4"
+    "stylelint-scss": "^3.21.0"
   }
 }
