--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jhqn/react",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "jade前端自定义react代码规范",
   "main": "dist/index.js",
   "files": [
@@ -30,12 +30,16 @@
   "publishConfig": {
     "access": "public"
   },
+  "peerDependencies": {
+    "eslint": "^7.0.0 || ^8.0.0",
+    "prettier": "^2.4.0",
+    "stylelint": "^13.13.0"
+  },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint": "^8.0.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
@@ -44,8 +48,6 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-unicorn": "^37.0.0",
-    "prettier": "^2.4.1",
-    "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^9.0.2",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-recommended": "^5.0.0",
@@ -53,7 +55,6 @@
     "stylelint-declaration-block-no-ignored-properties": "^2.4.0",
     "stylelint-no-unsupported-browser-features": "^5.0.2",
     "stylelint-order": "^4.1.0",
-    "stylelint-scss": "^3.21.0",
-    "typescript": "^4.4.4"
+    "stylelint-scss": "^3.21.0"
   }
 }
