--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -33,7 +33,7 @@
   "peerDependencies": {
     "eslint": "^7.0.0 || ^8.0.0",
     "prettier": "^2.4.0",
-    "stylelint": "^13.13.0"
+    "stylelint": "^13.13.0 || ^14.0.0"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -52,6 +52,7 @@
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-recommended": "^5.0.0",
     "stylelint-config-standard": "^22.0.0",
+    "stylelint-config-standard-scss": "^2.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.4.0",
     "stylelint-no-unsupported-browser-features": "^5.0.2",
     "stylelint-order": "^4.1.0",
