--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jhqn/react",
-  "version": "0.1.0",
+  "version": "0.0.16",
   "description": "jade前端自定义react代码规范",
   "main": "dist/index.js",
   "files": [
@@ -36,8 +36,8 @@
     "stylelint": "^13.13.0 || ^14.0.0"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
@@ -48,14 +48,16 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-unicorn": "^37.0.1",
+    "postcss-scss": "^4.0.2",
     "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-recommended": "^5.0.0",
-    "stylelint-config-standard": "^22.0.0",
+    "stylelint-config-recess-order": "^2.5.0",
+    "stylelint-config-recommended": "^6.0.0",
+    "stylelint-config-standard": "^23.0.0",
     "stylelint-config-standard-scss": "^2.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.4.0",
+    "stylelint-high-performance-animation": "^1.5.2",
     "stylelint-no-unsupported-browser-features": "^5.0.2",
-    "stylelint-order": "^4.1.0",
-    "stylelint-scss": "^3.21.0"
+    "stylelint-order": "^5.0.0",
+    "stylelint-scss": "^4.0.0"
   }
 }
