--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jhqn/react",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "jade前端自定义react代码规范",
   "main": "dist/index.js",
   "files": [
@@ -46,7 +46,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react-hooks": "^4.2.1-alpha-00ced1e2b-20211102",
     "eslint-plugin-unicorn": "^37.0.1",
     "postcss-scss": "^4.0.2",
     "stylelint-config-prettier": "^9.0.3",
