--- a/packages/example/vue/package.json
+++ b/packages/example/vue/package.json
@@ -5,20 +5,57 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "lint": "eslint src/**/*.{ts,tsx,vue}",
+    "prettier": "prettier --check src/**/*.{ts,tsx,vue}",
+    "stylelint": "stylelint src/**/*.{css,scss,less,vue}"
   },
   "dependencies": {
-    "vue": "^3.2.16"
+    "ant-design-vue": "^3.0.0-alpha.11",
+    "element-plus": "^1.2.0-beta.3",
+    "vant": "^3.2.8",
+    "vue": "^3.2.21"
   },
   "devDependencies": {
-    "@jhqn/vue": "link:..\\..\\vue",
-    "@vitejs/plugin-vue": "^1.9.3",
-    "eslint": "^8.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
+    "@vitejs/plugin-vue": "^1.9.4",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-typescript": "^9.0.1",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-compat": "^3.13.0",
+    "eslint-plugin-ecmascript-compat": "^1.1.1",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier-vue": "^3.1.0",
+    "eslint-plugin-unicorn": "^37.0.1",
+    "eslint-plugin-vue": "^8.0.3",
+    "postcss-html": "^1.2.0",
+    "postcss-scss": "^4.0.2",
     "prettier": "^2.4.1",
     "sass": "^1.43.4",
     "stylelint": "^14.0.1",
-    "typescript": "^4.4.3",
-    "vite": "^2.6.4",
-    "vue-tsc": "^0.3.0"
+    "stylelint-config-html": "^1.0.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recess-order": "^2.6.0",
+    "stylelint-config-recommended": "^6.0.0",
+    "stylelint-config-recommended-scss": "^5.0.1",
+    "stylelint-config-recommended-vue": "^1.0.0",
+    "stylelint-config-standard": "^23.0.0",
+    "stylelint-config-standard-scss": "^2.0.1",
+    "stylelint-declaration-block-no-ignored-properties": "^2.4.0",
+    "stylelint-high-performance-animation": "^1.5.2",
+    "stylelint-no-unsupported-browser-features": "^5.0.2",
+    "stylelint-order": "^5.0.0",
+    "stylelint-scss": "^4.0.0",
+    "typescript": "^4.4.4",
+    "unplugin-vue-components": "^0.17.2",
+    "vite": "^2.6.14",
+    "vue-tsc": "^0.29.2"
   }
 }
