--- a/packages/example/vue/package.json
+++ b/packages/example/vue/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-prettier-vue": "^3.1.0",
     "eslint-plugin-unicorn": "^39.0.0",
     "eslint-plugin-vue": "^8.1.1",
+    "postcss": "^8.4.1",
     "postcss-html": "^1.3.0",
     "postcss-scss": "^4.0.2",
     "prettier": "^2.4.1",
