--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "build": "pnpm run build --filter @jhqn/*",
-    "prepublishOnly": "pnpm run prepublishOnly --filter @jhqn/*"
+    "prepublishOnly": "pnpm run prepublishOnly --filter @jhqn/*",
+    "update": "pnpm up -i"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,6 @@
     "@commitlint/config-conventional": "^15.0.0",
     "husky": "^7.0.4",
     "rimraf": "^3.0.2",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.5"
   }
 }
