--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jhqn/react",
-  "version": "0.1.14",
+  "version": "0.1.15",
   "description": "jade前端自定义react代码规范",
   "main": "dist/index.js",
   "files": [
@@ -8,7 +8,8 @@
   ],
   "scripts": {
     "build": "tsc --build tsconfig.json",
-    "prepublishOnly": "rimraf dist && npm run build"
+    "prepublishOnly": "rimraf dist && npm run build",
+    "update": "pnpm up -i"
   },
   "repository": {
     "type": "git",
@@ -36,12 +37,12 @@
     "stylelint": "^14.0.0"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.9.0",
-    "@typescript-eslint/parser": "^5.9.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-compat": "^4.0.0",
+    "eslint-plugin-compat": "^4.0.2",
     "eslint-plugin-ecmascript-compat": "^1.1.1",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.25.4",
@@ -49,8 +50,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-unicorn": "^40.0.0",
-    "postcss-scss": "^4.0.2",
+    "eslint-plugin-unicorn": "^40.1.0",
+    "postcss-scss": "^4.0.3",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recess-order": "^3.0.0",
     "stylelint-config-recommended": "^6.0.0",
