--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "build": "tsc --build tsconfig.json",
     "prepublishOnly": "rimraf dist && npm run build",
-    "update": "pnpm up -i"
+    "update": "pnpm up -i",
+    "release": "pnpm publish -r"
   },
   "repository": {
     "type": "git",
