--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jhqn/react",
-  "version": "0.1.16",
+  "version": "0.1.17",
   "description": "jade前端自定义react代码规范",
   "main": "dist/index.js",
   "files": [
@@ -33,6 +33,7 @@
   },
   "peerDependencies": {
     "eslint": "^8.2.0",
+    "postcss": "^8.3.0",
     "prettier": "^2.4.0",
     "stylelint": "^14.0.0"
   },
@@ -43,10 +44,11 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-compat": "^4.0.2",
-    "eslint-plugin-ecmascript-compat": "^1.1.1",
+    "eslint-plugin-ecmascript-compat": "^2.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-mobx": "^0.0.8",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
@@ -55,8 +57,8 @@
     "prettier-plugin-jsdoc": "^0.3.30",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recess-order": "^3.0.0",
-    "stylelint-config-recommended": "^6.0.0",
-    "stylelint-config-standard": "^24.0.0",
+    "stylelint-config-recommended": "^7.0.0",
+    "stylelint-config-standard": "^25.0.0",
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.5.0",
     "stylelint-high-performance-animation": "^1.6.0",
