--- a/packages/example/react/package.json
+++ b/packages/example/react/package.json
@@ -13,37 +13,16 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@jhqn/react": "link:..\\..\\react",
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
-    "@vitejs/plugin-react": "^1.0.7",
-    "eslint": "^8.1.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-unicorn": "^37.0.1",
-    "postcss-scss": "^4.0.2",
-    "prettier": "^2.4.1",
-    "sass": "^1.43.4",
-    "stylelint": "^14.0.1",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-recess-order": "^2.5.0",
-    "stylelint-config-recommended": "^6.0.0",
-    "stylelint-config-standard": "^23.0.0",
-    "stylelint-config-standard-scss": "^2.0.0",
-    "stylelint-declaration-block-no-ignored-properties": "^2.4.0",
-    "stylelint-high-performance-animation": "^1.5.2",
-    "stylelint-no-unsupported-browser-features": "^5.0.2",
-    "stylelint-order": "^5.0.0",
-    "stylelint-scss": "^4.0.0",
-    "typescript": "^4.4.4",
-    "vite": "^2.6.13"
+    "@jhqn/react": "workspace:*",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@vitejs/plugin-react": "^1.2.0",
+    "eslint": "^8.10.0",
+    "postcss-scss": "^4.0.3",
+    "prettier": "^2.5.1",
+    "sass": "^1.49.9",
+    "stylelint": "^14.5.3",
+    "typescript": "^4.5.5",
+    "vite": "^2.8.4"
   }
 }
