--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
+    "@types/node": "^17.0.21",
     "husky": "^7.0.4",
     "rimraf": "^3.0.2",
     "typescript": "^4.5.5"
