--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jhqn/vue",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "jade前端自定义vue代码规范",
   "main": "dist/index.js",
   "files": [
@@ -33,16 +33,16 @@
   },
   "peerDependencies": {
     "eslint": "^8.2.0",
+    "postcss": "^8.3.0",
     "prettier": "^2.4.0",
-    "stylelint": "^14.0.0",
-    "postcss": "^8.3.0"
+    "stylelint": "^14.0.0"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
     "@vue/eslint-config-typescript": "^10.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-compat": "^4.0.2",
     "eslint-plugin-ecmascript-compat": "^2.0.0",
@@ -52,7 +52,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-prettier-vue": "^3.1.0",
     "eslint-plugin-unicorn": "^41.0.0",
-    "eslint-plugin-vue": "^8.4.1",
+    "eslint-plugin-vue": "^8.5.0",
     "postcss-html": "^1.3.0",
     "postcss-scss": "^4.0.3",
     "prettier-plugin-jsdoc": "^0.3.30",
@@ -64,7 +64,7 @@
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.5.0",
     "stylelint-high-performance-animation": "^1.6.0",
-    "stylelint-no-unsupported-browser-features": "^5.0.2",
+    "stylelint-no-unsupported-browser-features": "^5.0.3",
     "stylelint-scss": "^4.1.0"
   }
 }
