--- a/packages/example/react/package.json
+++ b/packages/example/react/package.json
@@ -6,7 +6,10 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview",
-    "stylelint": "stylelint **/*.{scss,css} --fix"
+    "lint": "eslint src/**/*.{ts,tsx}",
+    "prettier": "prettier --check src/**/*.{ts,tsx}",
+    "stylelint": "stylelint **/*.{scss,css} --fix",
+    "update": "pnpm up -i"
   },
   "dependencies": {
     "react": "^17.0.2",
@@ -14,15 +17,16 @@
   },
   "devDependencies": {
     "@jhqn/react": "workspace:*",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "^17.0.40",
+    "@types/react-dom": "^17.0.13",
     "@vitejs/plugin-react": "^1.2.0",
-    "eslint": "^8.10.0",
+    "eslint": "^8.11.0",
+    "postcss": "^8.4.11",
     "postcss-scss": "^4.0.3",
-    "prettier": "^2.5.1",
+    "prettier": "^2.6.0",
     "sass": "^1.49.9",
     "stylelint": "^14.5.3",
-    "typescript": "^4.5.5",
-    "vite": "^2.8.4"
+    "typescript": "^4.6.2",
+    "vite": "^2.8.6"
   }
 }
