--- a/packages/example/vue/package.json
+++ b/packages/example/vue/package.json
@@ -8,25 +8,26 @@
     "serve": "vite preview",
     "lint": "eslint src/**/*.{ts,tsx,vue}",
     "prettier": "prettier --check src/**/*.{ts,tsx,vue}",
-    "stylelint": "stylelint src/**/*.{css,scss,less,vue}"
+    "stylelint": "stylelint src/**/*.{css,scss,less,vue}",
+    "update": "pnpm up -i"
   },
   "dependencies": {
-    "ant-design-vue": "^3.0.0-beta.10",
-    "element-plus": "^2.0.3",
-    "vant": "^3.4.5",
+    "ant-design-vue": "^3.0.0-beta.13",
+    "element-plus": "^2.1.3",
+    "vant": "^3.4.6",
     "vue": "^3.2.31"
   },
   "devDependencies": {
     "@jhqn/vue": "workspace:*",
-    "@vitejs/plugin-vue": "^2.2.2",
-    "eslint": "^8.10.0",
-    "postcss": "^8.4.7",
-    "prettier": "^2.5.1",
+    "@vitejs/plugin-vue": "^2.2.4",
+    "eslint": "^8.11.0",
+    "postcss": "^8.4.11",
+    "prettier": "^2.6.0",
     "sass": "^1.49.9",
     "stylelint": "^14.5.3",
-    "typescript": "^4.5.5",
+    "typescript": "^4.6.2",
     "unplugin-vue-components": "^0.17.21",
-    "vite": "^2.8.4",
-    "vue-tsc": "^0.32.0"
+    "vite": "^2.8.6",
+    "vue-tsc": "^0.32.1"
   }
 }
