--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,6 +47,10 @@ jobs:
 
       - name: Gen npmrc
         run: echo "//registry.npmjs.com/:_authToken=${{ secrets.NPM_PUBLISH_TOKEN }}" >> ./.npmrc
+
+      - name: Who am I?
+        run: npm whoami
+
       - name: Build & Publish
         run: sh ./scripts/publish.sh
         env:
