--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,10 +46,9 @@ jobs:
         run: pnpm i --frozen-lockfile
 
       - name: Gen npmrc
-        run: echo "//registry.npmjs.com/:_authToken=${{ secrets.NPM_PUBLISH_TOKEN }}" >> ./.npmrc
-
-      - name: Who am I?
-        run: npm whoami
+        run: |
+          echo "@jhqn:registry=https://registry.npmjs.com/" >> ./.npmrc
+          echo "//registry.npmjs.com/:_authToken=${{ secrets.NPM_PUBLISH_TOKEN }}" >> ./.npmrc
 
       - name: Build & Publish
         run: sh ./scripts/publish.sh
