--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "pnpm run build --filter @jhqn/*",
     "prepublishOnly": "pnpm run prepublishOnly --filter @jhqn/*",
     "update": "pnpm up -i",
+    "update:all": "pnpm up -r",
     "release": "pnpm publish -r --no-git-checks"
   },
   "repository": {
@@ -25,9 +26,9 @@
   "devDependencies": {
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
-    "@types/node": "^17.0.21",
+    "@types/node": "^17.0.23",
     "husky": "^7.0.4",
     "rimraf": "^3.0.2",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.3"
   }
 }
