--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "pnpm run build --filter @jhqn/*",
     "prepublishOnly": "pnpm run prepublishOnly --filter @jhqn/*",
-    "update": "pnpm up -i",
+    "update": "pnpm up -i -r",
     "update:all": "pnpm up -r",
     "release": "pnpm publish -r --no-git-checks"
   },
@@ -24,8 +24,8 @@
   },
   "homepage": "https://github.com/jaderd-jh/frontend-rules#readme",
   "devDependencies": {
-    "@commitlint/cli": "^15.0.0",
-    "@commitlint/config-conventional": "^15.0.0",
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
     "@types/node": "^17.0.23",
     "husky": "^7.0.4",
     "rimraf": "^3.0.2",
