--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -7,6 +7,7 @@
     "dist"
   ],
   "scripts": {
+    "dev": "tsc --build tsconfig.json -w",
     "build": "tsc --build tsconfig.json",
     "prepublishOnly": "rimraf dist && npm run build",
     "update": "pnpm up -i"
