--- a/packages/example/vue/package.json
+++ b/packages/example/vue/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@jhqn/vue": "workspace:*",
     "@vitejs/plugin-vue": "^2.3.1",
+    "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.12.0",
     "postcss": "^8.4.12",
     "prettier": "^2.6.1",
