--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "jade前端自定义代码规范",
   "private": true,
   "scripts": {
-    "dev": "pnpm run dev --filter @jhqn/*",
-    "build": "pnpm run build --filter @jhqn/*",
-    "prepublishOnly": "pnpm run prepublishOnly --filter @jhqn/*",
+    "dev": "pnpm dev --filter @jhqn/*",
+    "build": "pnpm --filter @jhqn/* build",
+    "prepublishOnly": "pnpm --filter @jhqn/* prepublishOnly",
     "update": "pnpm up -i -r",
     "update:all": "pnpm up -r",
     "release": "pnpm publish -r --no-git-checks"
@@ -25,11 +25,11 @@
   },
   "homepage": "https://github.com/jaderd-jh/frontend-rules#readme",
   "devDependencies": {
-    "@commitlint/cli": "^16.2.3",
-    "@commitlint/config-conventional": "^16.2.1",
-    "@types/node": "^17.0.23",
+    "@commitlint/cli": "^16.2.4",
+    "@commitlint/config-conventional": "^16.2.4",
+    "@types/node": "^17.0.31",
     "husky": "^7.0.4",
     "rimraf": "^3.0.2",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.4"
   }
 }
