--- a/packages/example/vue/package.json
+++ b/packages/example/vue/package.json
@@ -12,23 +12,23 @@
     "update": "pnpm up -i"
   },
   "dependencies": {
-    "ant-design-vue": "^3.0.0-beta.13",
-    "element-plus": "^2.1.7",
-    "vant": "^3.4.7",
-    "vue": "^3.2.31"
+    "ant-design-vue": "^3.2.2",
+    "element-plus": "^2.1.11",
+    "vant": "^3.4.9",
+    "vue": "^3.2.33"
   },
   "devDependencies": {
     "@jhqn/vue": "workspace:*",
-    "@vitejs/plugin-vue": "^2.3.1",
+    "@vitejs/plugin-vue": "^2.3.2",
     "@vue/tsconfig": "^0.1.3",
-    "eslint": "^8.12.0",
-    "postcss": "^8.4.12",
-    "prettier": "^2.6.1",
-    "sass": "^1.49.11",
-    "stylelint": "^14.6.1",
-    "typescript": "^4.6.3",
+    "eslint": "^8.14.0",
+    "postcss": "^8.4.13",
+    "prettier": "^2.6.2",
+    "sass": "^1.51.0",
+    "stylelint": "^14.8.2",
+    "typescript": "^4.6.4",
     "unplugin-vue-components": "^0.17.21",
-    "vite": "^2.9.1",
+    "vite": "^2.9.8",
     "vue-tsc": "^0.32.1"
   }
 }
