--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -33,31 +33,38 @@
     "access": "public"
   },
   "peerDependencies": {
-    "eslint": "^8.2.0",
+    "eslint": "^8.8.0",
     "postcss": "^8.3.0",
     "prettier": "^2.4.0",
     "stylelint": "^14.0.0"
   },
+  "devDependencies": {
+    "eslint": "^8.14.0",
+    "postcss": "^8.4.13",
+    "prettier": "^2.6.2",
+    "stylelint": "^14.8.2",
+    "typescript": "^4.6.4"
+  },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^2.7.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-compat": "^4.0.2",
     "eslint-plugin-ecmascript-compat": "^2.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-prettier-vue": "^3.1.0",
     "eslint-plugin-unicorn": "^42.0.0",
-    "eslint-plugin-vue": "^8.5.0",
-    "postcss-html": "^1.3.0",
-    "postcss-scss": "^4.0.3",
-    "prettier-plugin-jsdoc": "^0.3.36",
+    "eslint-plugin-vue": "^8.7.1",
+    "postcss-html": "^1.4.1",
+    "postcss-scss": "^4.0.4",
+    "prettier-plugin-jsdoc": "^0.3.38",
     "stylelint-config-html": "^1.0.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recess-order": "^3.0.0",
