--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "jade前端自定义代码规范",
   "private": true,
   "scripts": {
-    "dev": "pnpm dev --filter @jhqn/*",
+    "dev": "pnpm --filter @jhqn/* dev",
     "build": "pnpm --filter @jhqn/* build",
     "prepublishOnly": "pnpm --filter @jhqn/* prepublishOnly",
     "update": "pnpm up -i -r",
     "update:all": "pnpm up -r",
-    "release": "pnpm publish -r --no-git-checks"
+    "release": "pnpm publish -r --no-git-checks",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -28,7 +29,7 @@
     "@commitlint/cli": "^16.2.4",
     "@commitlint/config-conventional": "^16.2.4",
     "@types/node": "^17.0.31",
-    "husky": "^7.0.4",
+    "husky": "^8.0.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.6.4"
   }
