--- a/packages/example/react/package.json
+++ b/packages/example/react/package.json
@@ -12,15 +12,16 @@
     "update": "pnpm up -i"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "antd": "^4.20.3",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   },
   "devDependencies": {
     "@jhqn/react": "workspace:*",
-    "@types/react": "^17.0.44",
-    "@types/react-dom": "^17.0.16",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.3",
     "@vitejs/plugin-react": "^1.3.2",
-    "eslint": "^8.14.0",
+    "eslint": "^8.15.0",
     "postcss": "^8.4.13",
     "postcss-scss": "^4.0.4",
     "prettier": "^2.6.2",
